--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: windows
 files:
   - source: \
-    destination: D:\Websites\mike.omnizant.com
+    destination: C:\inetpub\wwwroot
 hooks:
   BeforeInstall:
     - location: \before-install.bat
